--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             'UA', {
                 appKey: 'k_N_4bKERXeMnGSsS5nMaA',
                 token: 'MTprX05fNGJLRVJYZU1uR1NzUzVuTWFBOkJYNE9FS0xaM011TzdBU0xWQVR4cWZLdkV5OW9oZDdhU2NJVW5YYUNGM00',
-                vapidPublicKey: 'BDR1e93Tii3hjhtevwTbpXJjZf5nFfQOPT_-6vJ_kcFJgW9B7qoIZ465BG0Dg5EhcVSQ1HfBu0cne-nTd-pvDLg='
+                vapidPublicKey: 'BDR1e93Tii3hjhtevwTbpXJjZf5nFfQOPT_-6vJ_kcFJgW9B7qoIZ465BG0Dg5EhcVSQ1HfBu0cne-nTd-pvDLg=',
+                workerUrl: 'https://joafie.github.io/TestWebNotify/push-worker.js'
             });
 
 
